[package]
name = "rp_keypad"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { version = ">=0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = ">=0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

[lib]
name = "rp_keypad"
path = "src/rp_keypad.rs"